--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,10 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>CafeManagement</name>
 	<description>RESTful API for cafe management app</description>
+	<packaging>war</packaging>
 	<properties>
 		<java.version>1.8</java.version>
+		<servlet-api.version>3.1.0</servlet-api.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -52,6 +54,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 
